2010-12-12 Roman
- FIX:DAQ.Siemens: NoDave is fixed for structures pack from all header space. #pragma pack(1) is replaced by #pragma pack(push,1) ... #pragma pack(pop).
    The problem is detected on ARM.


2010-12-10 Roman
- SYS: The option '--enable-CrossCompile' is added for disable some configure script's tests for cross compiling build.
- !!:FIX:SYS: The command 'make dist' is fixed and adapted for correct OpenSCADA distribution create.
- !!!!:DAQ.JavaLikeCalc: VM full rewrited for direct command's structure using.


2010-12-09 Roman
- !!:FIX:Protocol.HTTP, UI.WebCfg, UI.WebCfgD, UI.WebVision, UI.WebUser: POST content's items by boundary parsing is fixed for process all item's variables.
- FIX:UI.WebCfgD: Images download is fixed for Google Chrome.


2010-12-08 Roman
- SYS: The configure option --disable-LibGD is added for using library into OpenSCADA core exclude.


2010-12-07 Roman
- FIX:DAQ.JavaLikeCalk: Unaligned access for ARM is fixed into JavaScript VM.


2010-12-03 Roman
- DAQ.DAQGate: Parameters cache is added for autonomous work with archives and without remote station.


2010-12-02 Roman
- SYS: TTransportS::traf2str() is renamed and moved to TSYS::cpct2str().


2010-12-01 Roman
- DAQ.BFN: Some fixes and debug disable.
- FIX:UI.VCAEngine: Parent widget name set is fixed for included widget's copy of a template page.
- UI.VCAEngine: Context help is added for attributes 'lev' and 'tSize' of primitive "Protocol".


2010-11-30 Roman
- !!:Transport, Transport.*: The function TTransportS::traf2str() is added for traffic counter convert to string like "12.5KiB".
    New function is used everywhere.
- FIX:Transport.Sockets: Close client connections at timeout of life time is fixed for connected but no data receiving connections.
- FIX:DB, DB.*: Disable access for other to view DB's tables content and DB's address field update.


2010-11-29 Roman