@@ -1,3 +1,14 @@
+2010-12-14 Roman
+- SYS: Function TVal::descr() is added to user's API.
+- FIX:SYS: Result for TVarObj::propGet() for miss properties is set to EVAL_BOOL.
+- FIX:DAQ.BFN: Call task termination is made easy by check for cntr.endrun_req into cycles.
+- FIX:DAQ.JavaLikeCalc: Some messages is fixed.
+- !!!:FIX:Archive.FSArch: The archive files creation for messages is fixed and rewrited for more old messages place support.
+    The option "Prevent duples" is added for prevent storing duples messages.
+- FIX:UI.Vision: Warning generate is fixed for empty dicuments of primitive "Document".
+- FIX:Archive: The user's API function messGet() is fixed for crash.
+
+
 2010-12-12 Roman
 - FIX:DAQ.Siemens: NoDave is fixed for structures pack from all header space. #pragma pack(1) is replaced by #pragma pack(push,1) ... #pragma pack(pop).
     The problem is detected on ARM.
